--- a/_publications/HPCA2024.md
+++ b/_publications/HPCA2024.md
@@ -4,6 +4,7 @@ collection: publications
 permalink: /publications/HPCA2024
 venue: "The 30th IEEE International Symposium on High-Performance Computer Architecture (HPCA2024)"
 date: 2024-03-02
+citation: ''
 ---
 
 ## Abstract
