--- a/_publications/ICCD2020.md
+++ b/_publications/ICCD2020.md
@@ -8,6 +8,22 @@ date: 2020-10-18
 
 ## Abstract
 
+**Background**:  
+The "Memory Wall" remains a persistent problem as processor speeds outpace memory access rates, leading to significant stalls in data-intensive applications. Traditional prefetching methods are effective to some extent but fail to fully address concurrent memory access scenarios, where multiple overlapping requests impact performance unpredictably.
+
+**Motivation**:  
+APAC was developed to introduce Pure Prefetch Coverage (PPC), a metric that enhances traditional prefetching by considering concurrent memory access. This new metric helps gauge the real effectiveness of prefetching in systems where data concurrency is high, enabling more accurate and adaptable prefetching strategies.
+
+**Key Features**:
+- **Pure Prefetch Coverage (PPC)**: Improves on the conventional Prefetch Coverage metric by capturing the impact of concurrent accesses, allowing for precise adjustments in prefetching aggressiveness.
+- **Adaptive Prefetch Tuning**: By dynamically monitoring PPC and Pure Miss Rate (pMR), APAC adapts its prefetching intensity to maintain optimal cache utilization under varying memory access conditions.
+
+**Results**:  
+APAC demonstrates significant improvements in both single-threaded and multi-core environments, with an average 17.3% IPC gain in single-thread memory-intensive benchmarks and an 8.5% IPC gain in multi-core systems.
+
+**Conclusion**:  
+APAC’s adaptive approach to prefetching shows that accurately measuring and leveraging concurrency in memory access can result in significant performance gains, making it a robust solution for data-intensive applications.
+
 Prefetching techniques have been studied for decades. However, there are few studies on how concurrent memory accesses may affect prefetching effectiveness. When there are multiple concurrent memory requests, we can classify them into sub-classes by analyzing the overlapping relationship. In this work, we first propose pure prefetch coverage (PPC), a novel prefetching metric that can identify an accurate prefetch coverage under the concurrent memory access model. Then we propose APAC, an adaptive prefetch framework with PPC metric that can capture the dynamics of applications and adjust the prefetching aggressiveness. Our experimental results show that the PPC metric has a higher IPC correlation compared to the conventional prefetch coverage (PC) metric. For memory-intensive single-thread benchmarks, APAC provides an average performance improvement by 17.3% and 5.9% compared to the state-of-the-art adaptive prefetch framework FDP and NST. In a multi-core system, APAC outperforms FDP and NST by 8.5% and 5.0% IPC on average, respectively.
 
 [paper](../files/ICCD2020/APAC_paper.pdf)
