--- a/_publications/HPCA2023.md
+++ b/_publications/HPCA2023.md
@@ -6,9 +6,24 @@ venue: "The 29th IEEE International Symposium on High-Performance Computer Archi
 date: 2024-02-25
 ---
 
-## Abstract
 
-Improving cache performance is a lasting research topic. While utilizing data locality to enhance cache performance becomes more and more difficult, data access concurrency provides a new opportunity for cache performance optimization. In this work, we propose a novel concurrency-aware cache management framework that outperforms state-of-the-art locality-only cache management schemes. First, we investigate the merit of data access concurrency and pinpoint that reducing the miss rate may not necessarily lead to better overall performance. Next, we introduce the pure miss contribution (PMC) metric, a lightweight and versatile concurrency-aware indicator, to accurately measure the cost of each outstanding miss access by considering data concurrency.
-Then, we present CARE, a dynamic adjustable, concurrency-aware, low-overhead cache management framework with the help of the PMC metric. We evaluate CARE with extensive experiments across different application domains and show significant performance gains with the consideration of data concurrency. In a 4-core system, CARE improves IPC by 10.3% over LRU replacement. In 8 and 16-core systems where more concurrent data accesses exist, CARE outperforms LRU by 13.0% and 17.1%, respectively. 
+**Background**:  
+While data access concurrency is a common feature in multi-core systems, traditional cache management policies focus primarily on data locality, often neglecting the optimization potential that concurrent accesses offer. This oversight limits cache performance improvements in data-intensive applications.
+
+**Design**:  
+To improve cache efficiency in multi-core systems, there is a need for cache management that considers both data locality and concurrent access patterns. By reducing cache misses that incur high penalties in concurrent scenarios, overall performance can be enhanced, addressing the limitations of locality-only cache policies.
+
+**Key Features**:
+- **Pure Miss Contribution (PMC)**: A metric that quantifies the performance impact of cache misses, especially under concurrent access conditions, allowing CARE to prioritize high-cost misses for replacement.
+- **Dynamic Threshold Reconfiguration Mechanism (DTRM)**: CARE’s DTRM dynamically adjusts cache thresholds based on PMC, aligning cache behavior with varying workload demands for enhanced efficiency.
+
+**Results**:  
+CARE achieves substantial improvements over traditional LRU policies, with an average 10.3% IPC gain in 4-core systems and up to 17.1% IPC improvement in 16-core systems. These results demonstrate CARE’s scalability and effectiveness in high-concurrency environments.
+
+**Conclusion**:  
+By integrating concurrency-aware metrics and adaptive mechanisms, CARE provides a robust approach to improving cache efficiency in multi-core systems, addressing both locality and concurrency to mitigate the Memory Wall problem.
+
+
+
 
 [paper](../files/HPCA2023/CARE_paper.pdf) [slides](../files/HPCA2023/CARE_slides.pdf)
