--- a/_publications/HPCA2024.md
+++ b/_publications/HPCA2024.md
@@ -6,8 +6,24 @@ venue: "The 30th IEEE International Symposium on High-Performance Computer Archi
 date: 2024-03-02
 ---
 
-## Abstract
 
-Cache management is a critical aspect of computer architecture, encompassing techniques such as cache replacement, bypassing, and prefetching. Existing research has often focused on individual techniques, overlooking the potential benefits of joint optimization. Moreover, many of these approaches rely on static and intuition-driven policies, limiting their performance under complex and dynamic workloads. To address these challenges, this paper introduces CHROME, a novel concurrency-aware cache management framework. CHROME takes a holistic approach by seamlessly integrating intelligent cache replacement and bypassing with pattern-based prefetching. By leveraging online reinforcement learning, CHROME dynamically adapts cache decisions based on multiple program features and applies a reward for each decision that considers the accuracy of the action and the system-level feedback information. Our performance evaluation demonstrates that CHROME outperforms current state-of-the-art schemes, exhibiting significant improvements in cache management. Notably, CHROME achieves a remarkable performance boost of up to 13.7% over the traditional LRU method in multi-core systems with only modest overhead.
+**Background**:  
+As data-intensive workloads continue to grow, cache management techniques—such as replacement, bypassing, and prefetching—are essential but are often treated independently. CHROME integrates these techniques using an online reinforcement learning framework to achieve a cohesive cache management strategy.
 
-[paper](../files/HPCA2024/CHROME_paper.pdf) [slides](../files/HPCA2024/CHROME_slides_updates.pdf) [poster](../files/HPCA2024/CHROME_poster_final.pdf) [code](https://github.com/Xiaoyang-Lu/CHROME/tree/main) 
+**Design**:  
+CHROME aims to bridge the gap between separate cache management techniques by leveraging reinforcement learning to optimize cache actions dynamically. By monitoring both data locality and concurrency, CHROME adapts to diverse workloads and system configurations in real time.
+
+**Key Features**:
+- **Holistic Cache Management**: Combines cache replacement, bypassing, and prefetching to optimize cache usage.
+- **Online Reinforcement Learning**: Employs reinforcement learning to continually adjust cache decisions based on observed workload characteristics, improving adaptability.
+- **Concurrency-Aware System Feedback**: Provides CHROME with system-level feedback, enhancing its ability to make accurate cache management decisions.
+
+**Results**:  
+CHROME outperforms existing cache management schemes, achieving a 13.7% performance improvement over the LRU baseline in 16-core systems and consistently surpassing competing frameworks in diverse workloads.
+
+**Conclusion**:  
+CHROME’s holistic and adaptive approach demonstrates the benefits of combining multiple cache management strategies through reinforcement learning, underscoring its potential as a versatile solution for high-performance computing systems.
+
+
+
+[paper](../files/HPCA2024/CHROME_paper.pdf) [slides](../files/HPCA2024/CHROME_slides_updates.pdf) [poster](../files/HPCA2024/CHROME_poster_final.pdf) [code](https://github.com/Xiaoyang-Lu/CHROME/tree/main)
