--- a/_publications/ICCD2024.md
+++ b/_publications/ICCD2024.md
@@ -1,5 +1,5 @@
 ---
-title: "AceMiner: Accelerating Graph Pattern Matching using PIM with Optimized Cache System}"
+title: "AceMiner: Accelerating Graph Pattern Matching using PIM with Optimized Cache System"
 collection: publications
 permalink: /publications/ICCD2024
 venue: "The 2024 IEEE 42nd International Conference on Computer Design (ICCD 2024)"
