--- a/_publications/HPCA2024.md
+++ b/_publications/HPCA2024.md
@@ -15,6 +15,11 @@ As data-intensive workloads continue to grow, cache management techniques—such
 
 CHROME aims to bridge the gap between separate cache management techniques by leveraging reinforcement learning to optimize cache actions dynamically. By monitoring both data locality and concurrency, CHROME adapts to diverse workloads and system configurations in real time.
 
+<div style="text-align: center;">
+    <img src="../files/HPCA2024/CHROME_overview.png" alt="Overview of CHROME Design" width="80%">
+    <p><em>Overview of CHROME Design</em></p>
+</div>
+
 ## Key Features
 
 - **Holistic Cache Management**: Combines cache replacement, bypassing, and prefetching to optimize cache usage.
@@ -24,6 +29,12 @@ CHROME aims to bridge the gap between separate cache management techniques by le
 ## Results
 
 CHROME outperforms existing cache management schemes, achieving a 13.7% performance improvement over the LRU baseline in 16-core systems and consistently surpassing competing frameworks in diverse workloads.
+
+<div style="text-align: center;">
+    <img src="../files/HPCA2024/CHROME_result.png" alt="Performance comparison among Hawkeye, Glider, Mockingjay, CARE, and CHROME" width="100%">
+    <p><em>Performance comparison among Hawkeye, Glider, Mockingjay, CARE, and CHROME</em></p>
+</div>
+
 
 ## Conclusion
 
