--- a/_publications/HPCA2023.md
+++ b/_publications/HPCA2023.md
@@ -15,6 +15,11 @@ While data access concurrency is a common feature in multi-core systems, traditi
 
 To improve cache efficiency in multi-core systems, there is a need for cache management that considers both data locality and concurrent access patterns. By reducing cache misses that incur high penalties in concurrent scenarios, overall performance can be enhanced, addressing the limitations of locality-only cache policies.
 
+<div style="text-align: center;">
+    <img src="../files/HPCA2023/CARE_overview.png" alt="Overview of CARE Design" width="80%">
+    <p><em>Overview of CARE Design</em></p>
+</div>
+
 ## Key Features
 
 - **Pure Miss Contribution (PMC)**: A metric that quantifies the performance impact of cache misses, especially under concurrent access conditions, allowing CARE to prioritize high-cost misses for replacement.
@@ -23,6 +28,11 @@ To improve cache efficiency in multi-core systems, there is a need for cache man
 ## Results
 
 CARE achieves substantial improvements over traditional LRU policies, with an average 10.3% IPC gain in 4-core systems and up to 17.1% IPC improvement in 16-core systems. These results demonstrate CARE’s scalability and effectiveness in high-concurrency environments.
+
+<div style="text-align: center;">
+    <img src="../files/HPCA2023/CARE_result.png" alt="Performance comparison among LRU, SHiP++, Hawkeye, Glider, Mockingjay, M-CARE, and CARE" width="80%">
+    <p><em>Performance comparison among LRU, SHiP++, Hawkeye, Glider, Mockingjay, M-CARE, and CARE</em></p>
+</div>
 
 ## Conclusion
 
