--- a/_publications/HPCA2023.md
+++ b/_publications/HPCA2023.md
@@ -23,7 +23,7 @@ To improve cache efficiency in multi-core systems, there is a need for cache man
 ## Key Features
 
 - **Pure Miss Contribution (PMC)**: A metric that quantifies the performance impact of cache misses, especially under concurrent access conditions, allowing CARE to prioritize high-cost misses for replacement.
-- **Dynamic Threshold Reconfiguration Mechanism (DTRM)**: CARE’s DTRM dynamically adjusts cache thresholds based on PMC, aligning cache behavior with varying workload demands for enhanced efficiency.
+- **Dynamic Threshold Reconfiguration Mechanism (DTRM)**: CARE dynamically adjusts cache management decisions based on PMC, aligning cache behavior with varying workload demands for enhanced efficiency.
 
 ## Results
 
