--- a/_publications/ICCD2020.md
+++ b/_publications/ICCD2020.md
@@ -14,14 +14,27 @@ The "Memory Wall" problem continues to challenge modern processors as memory acc
 
 To address this gap, APAC introduces Pure Prefetch Coverage (PPC), a novel metric designed to evaluate prefetch effectiveness in high-concurrency environments. By assessing pure misses—cache misses that cannot overlap with hits—PPC enables APAC to capture prefetching effectiveness accurately. PPC guides the adaptive fine-tuning of prefetching strategies, resulting in more accurate and efficient data fetching under concurrent access conditions.
 
+<div style="text-align: center;">
+    <img src="../files/ICCD2020/APAC_overview.png" alt="Adjuct prefetch aggressiveness with runtime metrics" width="80%">
+    <p><em>Adjuct prefetch aggressiveness with runtime metrics</em></p>
+</div>
+
 ## Key Features
 
 - **Pure Prefetch Coverage (PPC)**: An advanced metric that captures the impact of concurrent memory accesses on prefetch effectiveness, allowing precise control over prefetch aggressiveness.
+<div style="text-align: center;">
+    <img src="../files/ICCD2020/PPC.png" alt="PPC" width="80%">
+</div>
 - **Adaptive Prefetch Tuning**: APAC dynamically adjusts prefetching intensity based on real-time feedback from PPC, Pure Miss Rate (pMR), and Prefetch Accuracy (PA), optimizing cache performance across varying memory access patterns.
 
 ## Results
 
 In both single-core and multi-core environments, APAC demonstrates substantial performance improvements. Single-threaded benchmarks see an average 17.3% IPC gain, while multi-core systems achieve an 8.5% IPC increase over state-of-the-art adaptive frameworks.
+
+<div style="text-align: center;">
+    <img src="../files/ICCD2020/APAC_result.png" alt="Performance comparison among NAP, FDP, NST, and APAC" width="80%">
+    <p><em>Performance comparison among NAP, FDP, NST, and APAC</em></p>
+</div>
 
 ## Conclusion
 
