--- a/_publications/ICCD2020.md
+++ b/_publications/ICCD2020.md
@@ -23,13 +23,13 @@ To address this gap, APAC introduces Pure Prefetch Coverage (PPC), a novel metri
 
 - **Pure Prefetch Coverage (PPC)**: An advanced metric that captures the impact of concurrent memory accesses on prefetch effectiveness, allowing precise control over prefetch aggressiveness.
 <div style="text-align: center;">
-    <img src="../files/ICCD2020/PPC.png" alt="PPC" width="80%">
+    <img src="../files/ICCD2020/PPC.png" alt="PPC" width="70%">
 </div>
 - **Adaptive Prefetch Tuning**: APAC dynamically adjusts prefetching intensity based on real-time feedback from PPC, Pure Miss Rate (pMR), and Prefetch Accuracy (PA), optimizing cache performance across varying memory access patterns.
 
 ## Results
 
-In both single-core and multi-core environments, APAC demonstrates substantial performance improvements. Single-threaded benchmarks see an average 17.3% IPC gain, while multi-core systems achieve an 8.5% IPC increase over state-of-the-art adaptive frameworks.
+In both single-core and multi-core environments, APAC demonstrates substantial performance improvements, with an average 17.3% IPC gain over state-of-the-art adaptive frameworks.
 
 <div style="text-align: center;">
     <img src="../files/ICCD2020/APAC_result.png" alt="Performance comparison among NAP, FDP, NST, and APAC" width="80%">
