--- a/_publications/ICCD2021.md
+++ b/_publications/ICCD2021.md
@@ -13,15 +13,28 @@ As multi-core processors handle increasingly complex applications, shared last-l
 ## Design
 
 Premier leverages Pure Misses Per Kilo Instructions (PMPKI), a concurrency-aware metric that optimizes cache partitioning decisions by assessing the real cost of cache misses under concurrent access. By focusing on pure misses rather than total misses, Premier improves both performance and fairness across workloads.
+<div style="text-align: center;">
+    <img src="../files/ICCD2021/PMPKI_curves.png" alt="PMPKI_curves" width="90%">
+</div>
 
 ## Key Features
 
 - **Pure Misses Per Kilo Instructions (PMPKI)**: Assesses cache miss impact in concurrent access scenarios, providing an effective indicator for partitioning decisions.
+<div style="text-align: center;">
+    <img src="../files/ICCD2021/PMPKI.png" alt="PMPKI" width="70%">
+</div>
 - **Dynamic Cache Allocation**: Using PMPKI curves, Premier adapts cache allocation in real-time, balancing between performance and fairness for each application in multi-core setups.
+<div style="text-align: center;">
+    <img src="../files/ICCD2021/PMPKI_overview.png" alt="PMPKI_overview" width="90%">
+</div>
 
 ## Results
 
 Premier outperforms traditional partitioning schemes, achieving a 15.45% performance improvement and a 10.91% fairness increase in 8-core systems, demonstrating its strength in managing shared LLC resources effectively.
+<div style="text-align: center;">
+    <img src="../files/ICCD2021/PMPKI_result.png" alt="Throughput with varying core count" width="80%">
+    <p><em>Throughput with varying core count</em></p>
+</div>
 
 ## Conclusion
 
