--- a/_publications/ICCD2021.md
+++ b/_publications/ICCD2021.md
@@ -15,7 +15,12 @@ As multi-core processors handle increasingly complex applications, shared last-l
 Premier leverages Pure Misses Per Kilo Instructions (PMPKI), a concurrency-aware metric that optimizes cache partitioning decisions by assessing the real cost of cache misses under concurrent access. By focusing on pure misses rather than total misses, Premier improves both performance and fairness across workloads.
 <div style="text-align: center;">
     <img src="../files/ICCD2021/PMPKI_curves.png" alt="PMPKI_curves" width="90%">
+    <p><em>PMPKI and CPI (Cycle Per Instruction) for SPEC CPU 2017 benchmarks as the cache size is varied.
+    The x-axis represents the number of ways allocated from a 16-way L3 shared cache. </em></p>
 </div>
+
+
+
 
 ## Key Features
 
