--- a/_publications/ICCD2024.md
+++ b/_publications/ICCD2024.md
@@ -9,6 +9,13 @@ date: 2024-11-18
 ## Background
 
 Graph pattern matching (GPM) is critical in domains like bioinformatics and web analytics but often encounters memory bottlenecks due to frequent data transfers and irregular access patterns. Existing PIM solutions are limited in handling GPM's unique memory demands, resulting in underutilized locality and excessive data movement.
+<div style="text-align: center;">
+    <img src="../files/ICCD2024/AceMiner_background.png" alt="Overview of GPM algorithm" width="100%">
+    <p><em>Overview of GPM algorithm</em></p>
+</div>
+
+
+
 
 ## Design
 
@@ -16,7 +23,7 @@ AceMiner introduces a hardware-software co-designed PIM framework to address the
 
 <div style="text-align: center;">
     <img src="../files/ICCD2024/AceMiner_overview.png" alt=" Overall AceMiner system architecture" width="100%">
-    <p><em> Overall AceMiner system architecture</em></p>
+    <p><em>Overall AceMiner system architecture</em></p>
 </div>
 
 ## Key Features
@@ -27,6 +34,11 @@ AceMiner introduces a hardware-software co-designed PIM framework to address the
 ## Results
 
 AceMiner achieves a 40.2% speedup over the NDMiner framework and a 13.3% improvement over DIMMining, with lower energy consumption, demonstrating its effectiveness in high-throughput graph applications.
+
+<div style="text-align: center;">
+    <img src="../files/ICCD2024/AceMiner_result.png" alt="Performance comparison of state-of-the-art frameworks" width="80%">
+    <p><em>Performance comparison of state-of-the-art frameworks</em></p>
+</div>
 
 ## Conclusion
 
