--- a/_publications/HPCA2024.md
+++ b/_publications/HPCA2024.md
@@ -24,7 +24,7 @@ CHROME aims to bridge the gap between separate cache management techniques by le
 
 - **Holistic Cache Management**: Combines cache replacement, bypassing, and prefetching to optimize cache usage.
 - **Online Reinforcement Learning**: Employs reinforcement learning to continually adjust cache decisions based on observed workload characteristics, improving adaptability.
-- **Concurrency-Aware System Feedback**: Provides CHROME with system-level feedback, enhancing its ability to make accurate cache management decisions.
+- **Concurrency-Aware System Feedback**: Provides CHROME with concurrency-aware system-level feedback, enhancing its ability to make accurate cache management decisions.
 
 ## Results
 
