--- a/_publications/ICCD2024.md
+++ b/_publications/ICCD2024.md
@@ -29,6 +29,7 @@ AceMiner introduces a hardware-software co-designed PIM framework to address the
 ## Key Features
 
 - **HybridCache**: An in-DRAM cache system with a custom replacement policy tailored to GPM's locality demands, effectively reducing internal PIM data transfers.
+- **Advanced Replacement Policy**: Manages the irregular memory access patterns typical in GPM applications.
 - **Optimized Comparison Unit**: Reduces redundant memory loads by filtering data based on GPM-specific constraints, thus lowering the overall memory footprint.
 
 ## Results
@@ -45,4 +46,4 @@ AceMiner achieves a 40.2% speedup over the NDMiner framework and a 13.3% improve
 AceMiner demonstrates that by integrating a cache system and comparison unit within PIM, it’s possible to achieve high performance in data-intensive graph applications, setting a benchmark for future GPM-oriented PIM designs.
 
 
-[paper](../files/ICCD2024/AceMiner_paper.pdf)
+[paper](../files/ICCD2024/AceMiner_paper.pdf) [slides](../files/ICCD2024/AceMiner_slides.pdf)
