--- a/_publications/DATE2026.md
+++ b/_publications/DATE2026.md
@@ -1,5 +1,5 @@
 ---
-title: "Concurrency-Aware Cache Miss Cost Prediction with Perceptron Learning"
+title: "Zion: A Comprehensive, Adaptive, and Lightweight Hardware Prefetcher"
 collection: publications
 permalink: /publications/DATE2026
 venue: "Design, Automation and Test in Europe Conference (DATE 2026)"
