--- a/_publications/DATE2026.md
+++ b/_publications/DATE2026.md
@@ -8,7 +8,7 @@ date: 2026-4-20
 
 ## Background
 
-Memory-intensive workloads such as SPEC benchmarks and attention-based large language models increasingly dominate modern systems. In particular, self-attention mechanisms introduce quadratic memory complexity, leading to frequent data movement between on-chip caches and off-chip DRAM.
+Memory-intensive workloads increasingly dominate modern systems. In particular, self-attention mechanisms introduce quadratic memory complexity, leading to frequent data movement between on-chip caches and off-chip DRAM.
 
 Traditional hardware prefetchers aim to hide memory latency, but they often struggle with diverse and evolving access streams. Unified prediction tables suffer from entry conflicts, confidence bias, and limited adaptability under memory pressure, which reduces their effectiveness in multicore and attention-heavy environments.
 
