--- a/_publications/CAL2025.md
+++ b/_publications/CAL2025.md
@@ -5,6 +5,7 @@ permalink: /publications/CAL2025
 venue: "IEEE Computer Architecture Letters (CAL)"
 date: 2025-4-10
 ---
+Liang Yan, <b>Xiaoyang Lu</b>, Xiaoming Chen, Yinhe Han, Xian-He Sun
 
 ## Abstract
 Integrating processing-in-memory (PIM) with GPUs accelerates large language model (LLM) inference, but existing GPU-PIM systems encounter several challenges. While GPUs excel in large general matrix-matrix multiplications (GEMM), they struggle with small-scale operations better suited for PIM, which currently cannot handle them independently. Additionally, the computational demands of activation operations exceed the capabilities of current PIM technologies, leading to excessive data movement between the GPU and memory. PIM's potential for general matrix-vector multiplications (GEMV) is also limited by insufficient support for fine-grained parallelism. To address these issues, we propose Pyramid, a novel GPU-PIM system that optimizes PIM for LLM inference by strategically allocating cross-level computational resources within PIM to meet diverse needs and leveraging the strengths of both technologies. Evaluation results demonstrate that Pyramid outperforms existing systems like NeuPIM, AiM, and AttAcc by factors of 2.31×, 1.91×, and 1.72×, respectively.
