--- a/_publications/DATE2026.md
+++ b/_publications/DATE2026.md
@@ -5,6 +5,7 @@ permalink: /publications/DATE2026
 venue: "Design, Automation and Test in Europe Conference (DATE 2026)"
 date: 2026-4-20
 ---
+Vadim Biryukov, <b>Xiaoyang Lu</b>, Zirui Liu, Kaixiong Zhou, Xian-He Sun
 
 ## Background
 
