--- a/_publications/HPCA2023.md
+++ b/_publications/HPCA2023.md
@@ -5,7 +5,7 @@ permalink: /publications/HPCA2023
 venue: "The 29th IEEE International Symposium on High-Performance Computer Architecture (HPCA 2023)"
 date: 2024-02-25
 ---
-
+<b>Xiaoyang Lu</b>, Rujia Wang, Xian-He Sun
 
 ## Background
 
