--- a/_publications/HPCA2024.md
+++ b/_publications/HPCA2024.md
@@ -5,7 +5,7 @@ permalink: /publications/HPCA2024
 venue: "The 30th IEEE International Symposium on High-Performance Computer Architecture (HPCA 2024)"
 date: 2024-03-02
 ---
-
+<b>Xiaoyang Lu</b>, Hamed Najafi, Jason Liu, Xian-He Sun 
 
 ## Background
 
