--- a/_publications/ICCD2020.md
+++ b/_publications/ICCD2020.md
@@ -5,6 +5,7 @@ permalink: /publications/ICCD2020
 venue: "The 2020 IEEE 39th International Conference on Computer Design (ICCD 2020)"
 date: 2020-10-18
 ---
+<b>Xiaoyang Lu</b>, Rujia Wang, Xian-He Sun
 
 ## Background
 
