--- a/_publications/ICCD2021.md
+++ b/_publications/ICCD2021.md
@@ -5,6 +5,7 @@ permalink: /publications/ICCD2021
 venue: "The 2021 IEEE 39th International Conference on Computer Design (ICCD 2021)"
 date: 2021-10-24
 ---
+<b>Xiaoyang Lu</b>, Rujia Wang, Xian-He Sun
 
 ## Background
 
