--- a/_publications/ICCD2024.md
+++ b/_publications/ICCD2024.md
@@ -5,6 +5,7 @@ permalink: /publications/ICCD2024
 venue: "The 2024 IEEE 42nd International Conference on Computer Design (ICCD 2024)"
 date: 2024-11-18
 ---
+Liang Yan, <b>Xiaoyang Lu</b>, Xiaoming Chen, Sheng Xu, Xingqi Zou, Yinhe Han, Xian-He Sun
 
 ## Background
 
